tests/baselines/reference/collisionThisExpressionAndModuleInGlobal(strict=true).errors.txt
collisionThisExpressionAndModuleInGlobal.ts(5,15): error TS7041: The containing arrow function captures the global value of 'this'.


==== collisionThisExpressionAndModuleInGlobal.ts (1 errors) ====
    module _this { //Error
        class c {
        }
    }
    var f = () => this;
                  ~~~~
!!! error TS7041: The containing arrow function captures the global value of 'this'.